kubeconfigs/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pbs-backstage
  namespace: pbs-backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pbs-backstage
  template:
    metadata:
      labels:
        app: pbs-backstage
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: backstage
          image: ghcr.io/scout-ch/itkom-atlas:latest
          imagePullPolicy: Always
          # envFrom:
          #   - secretRef:
          #       name: pbs-backstage-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: pbs-backstage
  namespace: pbs-backstage
spec:
  selector:
    app: pbs-backstage
  ports:
    - port: 8080
      targetPort: 8080
---
